--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <p>Discord test</p>
-    <p>second test</p>
-    <p>testing bot</p>
+    <canvas></canvas>
 </body>
 </html>
