--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Web Brawler</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hiken - Browser Battle</h1>
     <canvas></canvas>
     <script src ="index.js"></script>
 </body>
