added functionality for start / quit button with different views (#42)

--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Brawler</title>
+
 </head>
 
 <body>
+
+    <div id="main">
+        <h1>HIKEN</h1>
+
+        <h2>BROWSER BATTLE</h2>
+        <button id="startBtn" onclick="return gotoCanvasPage()">START</button>
+
+   
+    </div>
+    <script src="index.js"></script>
+</body>
+
+
     <h1 style = " text-align: center">Hiken</h1>
 
     <canvas></canvas>
@@ -23,4 +37,5 @@
 </body>
 <div class =  "health_bar_style">
 </div>
+
 </html>
