--- a/canvas.html
+++ b/canvas.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hiken | Web Brawler</title>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
-    
+    <canvas></canvas>
+    <script src="canvas.js"></script>
     <div style="text-align: center">
     
         <div class="iframe-cont">
@@ -21,7 +22,7 @@
 	&controls=0
 	&mute=0" frameborder="0" enablejsapi="1" allow="autoplay" allowfullscreen ></iframe><br>
  
-  <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>  
+        <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>  
     </div>
    
         <!-- <div id="mute"> <img src="https://static.thenounproject.com/png/2038006-200.png"  height=50 width=60/></div> -->
@@ -29,8 +30,9 @@
     <div class="health_bar_style"></div>
   
    
-</div>
+    </div>
     <script src="index.js"></script>
+
 </body>
 </html>
 
