--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
    
     </div>
     <script src="index.js"></script>
-    
-<div class =  "health_bar_style">
-</div>
+<!-- <div class =  "health_bar_style"></div> -->
+
 </body>
 </html>
