--- a/canvas.html
+++ b/canvas.html
@@ -9,27 +9,24 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
-    <canvas></canvas>
+    <canvas><iframe id="youtube-video" width="360" height="200" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
+        autoplay=1
+        &disablekb=1
+        &enablejsapi=1
+        &loop=1
+        &controls=0
+        &mute=0" frameborder="0" enablejsapi="1" allow="autoplay" allowfullscreen ></iframe><br>
+     
+            <!--<div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>  --> 
+    </canvas>
     <script src="canvas.js"></script>
     <div style="text-align: center">
-    
-        <div class="iframe-cont">
-          <iframe id="youtube-video" width="360" height="200" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
-	autoplay=1
-	&disablekb=1
-	&enablejsapi=1
-	&loop=1
-	&controls=0
-	&mute=0" frameborder="0" enablejsapi="1" allow="autoplay" allowfullscreen ></iframe><br>
- 
-        <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>  
-    </div>
    
         <!-- <div id="mute"> <img src="https://static.thenounproject.com/png/2038006-200.png"  height=50 width=60/></div> -->
         <button id="back" onclick="return goBack()">Go back</button>
-    <div class="health_bar_style"></div>
+    <!--<div class="health_bar_style"></div>-->
   
-   
+        <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>
     </div>
     <script src="index.js"></script>
 
