hitboxes branch updated

--- a/canvas.html
+++ b/canvas.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiken | Web Brawler</title>
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <!--script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script --->
 </head>
 <body>
     <canvas><iframe id="youtube-video" width="360" height="200" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
