added some useful comments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>HIKEN</h1>
 
         <h2>BROWSER BATTLE</h2>
+        <!--when the start button is clicked the start page view will go to our main game-->
         <button id="startBtn" onclick="return gotoCanvasPage()">START</button>
 
    
