starting to add code for music controller

--- a/canvas.html
+++ b/canvas.html
@@ -27,6 +27,16 @@
     <!--<div class="health_bar_style"></div>-->
   
         <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>
+
+        <!-- Music controller box and buttons -->
+        <div id="prevSong"></div>
+
+        <div id="pauseSong"></div>
+
+        <div id="playSong"></div>
+
+        <div id="nextSong"></div>
+
     </div>
     <script src="index.js"></script>
 
