implemented simple music controller, can only pause/play

--- a/canvas.html
+++ b/canvas.html
@@ -26,16 +26,18 @@
         <button id="back" onclick="return goBack()">Go back</button>
     <!--<div class="health_bar_style"></div>-->
   
-        <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>
+        <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png" height=40 width=50/></div>
 
-        <!-- Music controller box and buttons -->
-        <div id="prevSong"></div>
+        <!-- Music controller graphics -->
+        <div id="musicIcon"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-14-512.png" height=120 width=150/></div>
 
-        <div id="pauseSong"></div>
+        <div id="prevSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-06-512.png" height=40 width=50/></div>
 
-        <div id="playSong"></div>
+        <div id="playSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-01-512.png" height=40 width=50/></div>
 
-        <div id="nextSong"></div>
+        <div id="pauseSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-03-512.png" height=40 width=50/></div>
+
+        <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50/></div>
 
     </div>
     <script src="index.js"></script>
