--- a/canvas.html
+++ b/canvas.html
@@ -6,10 +6,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiken | Web Brawler</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+    rel="stylesheet"
+  />
+  
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Press Start 2P', cursive;
+    }
+  </style>
     <!--script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script --->
 </head>
 <body>
-    <canvas><iframe id="youtube-video" width="360" height="200" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
+    <div style="position: relative; display: inline-block">
+        <!-- smaller red container div -->
+        <div
+          style="
+            position: absolute;
+            display: flex;
+            width: 100%;
+            align-items: center;
+            padding: 20px;
+          "
+        >
+          <!-- player health -->
+          <div
+            style="
+              position: relative;
+              width: 100%;
+              display: flex;
+              justify-content: flex-end;
+              border-top: 4px solid white;
+              border-left: 4px solid white;
+              border-bottom: 4px solid white;
+            "
+          >
+            <div style="background-color: red; height: 30px; width: 100%"></div>
+            <div
+              id="playerHealth"
+              style="
+                position: absolute;
+                background: #818cf8;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                width: 100%;
+              "
+            ></div>
+          </div>
+    
+          <!-- timer -->
+          <div
+            id="timer"
+            style="
+              background-color: black;
+              width: 100px;
+              height: 50px;
+              flex-shrink: 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              color: white;
+              border: 4px solid white;
+            "
+          >
+            10
+          </div>
+          <!-- enemy health -->
+          <div
+            style="
+              position: relative;
+              width: 100%;
+              border-top: 4px solid white;
+              border-bottom: 4px solid white;
+              border-right: 4px solid white;
+            "
+          >
+            <div style="background-color: red; height: 30px"></div>
+            <div
+              id="enemyHealth"
+              style="
+                position: absolute;
+                background: #818cf8;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+              "
+            ></div>
+          </div>
+          <div></div>
+        </div>
+        <div
+          id="displayText"
+          style="
+            position: absolute;
+            color: white;
+            align-items: center;
+            justify-content: center;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            display: none;
+          "
+        >
+          Tie
+        </div>
+   <!-- </div> -->
+    <canvas ><iframe id="youtube-video" width="360" height="200" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
         autoplay=1
         &disablekb=1
         &enablejsapi=1
@@ -19,7 +128,7 @@
      
             <!--<div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>  --> 
     </canvas>
-    <script src="canvas.js"></script>
+   
     <div style="text-align: center">
    
         <!-- <div id="mute"> <img src="https://static.thenounproject.com/png/2038006-200.png"  height=50 width=60/></div> -->
@@ -40,6 +149,14 @@
         <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50/></div>
 
     </div>
+    </div>
+    <!-- <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+    integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script> -->
+    <script src="canvas.js"></script>
     <script src="index.js"></script>
 
 </body>
