moved everything to folders

--- a/canvas.html
+++ b/canvas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="/css/canvas.css" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
       font-family: 'Press Start 2P', cursive;
     }
   </style>
-    <!--script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script --->
+   
 </head>
 <body>
   <div id="outer">
@@ -53,15 +53,11 @@
         &loop=1
         &controls=0
         &mute=0" frameborder="0" enablejsapi="1" allow="autoplay" allowfullscreen ></iframe><br>
-     
-            <!--<div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png"  height=40 width=50/></div>  --> 
     </canvas>
   </div>
   <div style="text-align: center; display: fixed; bottom: 0; right: 0">
    
-        <!-- <div id="mute"> <img src="https://static.thenounproject.com/png/2038006-200.png"  height=50 width=60/></div> -->
         <button id="back" onclick="return goBack()">Go back</button>
-    <!--<div class="health_bar_style"></div>-->
   
         <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png" height=40 width=50/></div>
 
@@ -78,14 +74,8 @@
 
   </div>
 
-    <!-- <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
-    integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script> -->
-  <script src="canvas.js"></script>
-  <script src="index.js"></script>
+  <script src="js/canvas.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 </html>
