--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="css/canvas.css" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet">
-    <title>Web Brawler</title>
+    <title>Hiken | Web Brawler</title>
 
 </head>
 
@@ -15,13 +15,9 @@
     <div id="main">
         <h1>HIKEN</h1>
         <h2>BROWSER BATTLE</h2>
-
         <!--when the start button is clicked the start page view will go to our main game-->
         <button id="startBtn" onclick="return gotoCanvasPage()">START</button>
-
     </div>
-    <script src="index.js"></script>
-<!-- <div class =  "health_bar_style"></div> -->
-
+    <script src="js/index.js"></script>
 </body>
 </html>
