--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/canvas.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet">
     <title>Hiken | Web Brawler</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 </head>
 
 <body>
-
-    <div id="main">
-        <h1>HIKEN</h1>
-        <h2>BROWSER BATTLE</h2>
-        <!--when the start button is clicked the start page view will go to our main game-->
-        <button id="startBtn" onclick="return gotoCanvasPage()">START</button>
-    </div>
-    <script src="js/index.js"></script>
+    <main>
+        <div class="container">
+            <h1>HIKEN</h1>
+            <h2>BROWSER BATTLE</h2>
+            <!--when the start button is clicked the start page view will go to our main game-->
+            <a href="canvas.html"><button>START</button></a>
+        </div>
+        <script src="js/index.js"></script>
+    </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <div class="content">
+            <h3>Web Brawler</h3>
+            <p>Hope you enjoy our game</p>
+            <ul class="socials">
+                <li><a href="#"><i class="fa fa-facebook"></i> </a></li>
+                <li><a href="#">social</a></li>
+                <li><a href="#">social</a></li>
+                <li><a href="#">social</a></li>
+                <li><a href="#">social</a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <P>copyright &copy;2022 Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
+        </div>
+    </footer>
 </body>
 </html>
