make footer stable

--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
         </div>
         <script src="js/index.js"></script>
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+   
     <footer>
         <div class="content">
             <h3>Web Brawler</h3>
@@ -40,7 +35,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <P>copyright &copy;2022 Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
+            <P>copyright &copy;<script>document.write(new Date().getFullYear());</script> Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
         </div>
     </footer>
 </body>
