update css and add grid

--- a/canvas.html
+++ b/canvas.html
@@ -12,16 +12,13 @@
     href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
     rel="stylesheet"
     />
-  
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Press Start 2P', cursive;
-    }
-  </style>
 </head>
 <body>
+    <nav>
+        <ul></ul>
+    </nav>
     <main>
+        <div class="everything">
         <div id="outer">
             <!-- smaller red container div -->
             <div id ="container">
@@ -60,7 +57,13 @@
         </canvas>
 
         </div>
+        <aside class="left-aside">
+            
+        </aside>
+        <aside class="right-aside">
 
+        </aside>
+        </div>
    
         <!-- removing mute button since we have music player-->
         <!-- <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png" height=40 width=50/></div> -->
