--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <p>Hope you enjoy our game</p>
             <ul class="socials">
                 <li><a href="#"><i class="fa fa-facebook"></i> </a></li>
-                <li><a href="#">social</a></li>
-                <li><a href="#">social</a></li>
-                <li><a href="#">social</a></li>
-                <li><a href="#">social</a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
             </ul>
         </div>
         <div class="copyright">
-            <P>copyright &copy;<script>document.write(new Date().getFullYear());</script> Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
+            <P>copyright &copy;<script>document.write(new Date().getFullYear());</script>
+            Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
         </div>
     </footer>
 </body>
