--- a/canvas.html
+++ b/canvas.html
@@ -69,21 +69,38 @@
         <!-- <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png" height=40 width=50/></div> -->
         
         <!-- Music controller graphics -->
+        <div class="music-player">
+
+            <div id="prevSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-06-512.png" height=40 width=50/></div>
+
+            <div id="playSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-01-512.png" height=40 width=50/></div>
+
+            <div id="pauseSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-03-512.png" height=40 width=50/></div>
+
+            <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50/></div>
+        </div>
         <div id="musicIcon"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-14-512.png" height=120 width=150/></div>
-
-        <div id="prevSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-06-512.png" height=40 width=50/></div>
-
-        <div id="playSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-01-512.png" height=40 width=50/></div>
-
-        <div id="pauseSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-03-512.png" height=40 width=50/></div>
-
-        <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50/></div>
-
 
     <a href="index.html"><button id="back">Go back</button></a>
     <script src="js/canvas.js"></script>
     <script src="js/index.js"></script>
     </main>
+    <footer>
+        <div class="content">
+            <h3>Web Brawler</h3>
+            <p>Hope you enjoy our game</p>
+            <ul class="socials">
+                <li><a href="#"><i class="fa fa-facebook"></i> </a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <P>copyright &copy;<script>document.write(new Date().getFullYear());</script>
+            Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
+        </div>
+    </footer>
 </body>
 </html>
 
