--- a/canvas.html
+++ b/canvas.html
@@ -14,9 +14,18 @@
     />
 </head>
 <body>
-    <nav>
-        <ul></ul>
-    </nav>
+    <header>
+        <img class="logo" src="" alt="logo">
+        <nav>
+            <ul class="navigation">
+                <li><a href="#">Characters</a></li>
+                <li><a href="#">Soundtrack</a></li>
+                <li><a href="#">Controls</a></li>
+            </ul>
+        </nav>
+        <a class="link">GitHub</a>
+    </header>
+    
     <main>
         <div class="everything">
         <div id="outer">
