--- a/canvas.html
+++ b/canvas.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/for-later/Start_Screen_White_BG_png.png" alt="logo">
+        <img class="logo" src="./for-later/Start_Screen_White_BG_png.png" alt="logo">
         <nav>
             <ul class="navigation">
                 <li><a href="#">Characters</a></li>
