fixed some of the css

--- a/canvas.html
+++ b/canvas.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Controls</a></li>
             </ul>
         </nav>
-        <a class="link">GitHub</a>
+        <a href="index.html" class="link">Go back</a>
     </header>
     
     <main>
@@ -88,9 +88,8 @@
 
             <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50/></div>
         </div>
-        <div id="musicIcon"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-14-512.png" height=120 width=150/></div>
 
-    <a href="index.html"><button id="back">Go back</button></a>
+    <!-- <a href="index.html"><button id="back">Go back</button></a> -->
     <script src="js/canvas.js"></script>
     <script src="js/index.js"></script>
     </main>
