--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <footer>
         <div class="content">
             <h3>Web Brawler</h3>
-            <p>Hope you enjoy our game</p>
+            <p>Hope you enjoy our game!</p>
             <ul class="socials">
                 <li><a href="#"><i class="fa fa-facebook"></i> </a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
