--- a/canvas.html
+++ b/canvas.html
@@ -90,8 +90,8 @@
         </div>
 
     <!-- <a href="index.html"><button id="back">Go back</button></a> -->
-    <script src="js/canvas.js"></script>
-    <script src="js/index.js"></script>
+    <script src="./js/canvas.js"></script>
+    <script src="./js/index.js"></script>
     </main>
     <footer>
         <div class="copyright">
