--- a/canvas.html
+++ b/canvas.html
@@ -75,7 +75,7 @@
         </div>
    
         <!-- removing mute button since we have music player-->
-        <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png" height=40 width=50/></div>
+        <!-- <div id="mute"> <img src="https://www.pngitem.com/pimgs/m/81-811082_mute-and-unmute-icon-png-transparent-png.png" height=40 width=50/></div> -->
         
         <!-- Music controller graphics -->
         <div class="music-player">
