created a fire sprite

--- a/canvas.html
+++ b/canvas.html
@@ -90,6 +90,7 @@
         </div>
 
     <!-- <a href="index.html"><button id="back">Go back</button></a> -->
+    <script src="./js/classes.js"></script>
     <script src="./js/canvas.js"></script>
     <script src="./js/index.js"></script>
     </main>
