--- a/canvas.html
+++ b/canvas.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiken | Web Brawler</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Ask what are these two for -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
     <link
     href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
     rel="stylesheet"
@@ -55,15 +56,16 @@
         <div id="displayText"> Tie </div>
    
         <canvas>
-            <iframe id="youtube-video" width="360" height="200" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
+        </canvas>
+        <!-- Youtube video -->
+        <iframe id="youtube-video" width="0" height="0" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
             autoplay=1
             &disablekb=1
             &enablejsapi=1
             &loop=1
             &controls=0
-            &mute=0" frameborder="0" enablejsapi="1" allow="autoplay" allowfullscreen >
+            &mute=0" frameborder="0"  allow="autoplay" allowfullscreen >
             </iframe>
-        </canvas>
 
         </div>
         <aside class="left-aside">
