finished implementing sprites

--- a/canvas.html
+++ b/canvas.html
@@ -58,7 +58,7 @@
         <canvas>
         </canvas>
         <!-- Youtube video -->
-        <iframe id="youtube-video" width="0" height="0" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
+        <iframe title="sometitle" id="youtube-video" width="0" height="0" src="https://www.youtube.com/embed/p56XUPetIAQ?enablejsapi=1&
             autoplay=1
             &disablekb=1
             &enablejsapi=1
@@ -82,13 +82,13 @@
         <!-- Music controller graphics -->
         <div class="music-player">
 
-            <div id="prevSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-06-512.png" height=40 width=50/></div>
+            <div id="prevSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-06-512.png" height=40 width=50 alt="prev"/></div>
 
-            <div id="playSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-01-512.png" height=40 width=50/></div>
+            <div id="playSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-01-512.png" height=40 width=50 alt="play"/></div>
 
-            <div id="pauseSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-03-512.png" height=40 width=50/></div>
+            <div id="pauseSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-03-512.png" height=40 width=50 alt="pause"/></div>
 
-            <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50/></div>
+            <div id="nextSong"><img src="https://cdn2.iconfinder.com/data/icons/music-player-black/32/music_player_black-05-512.png" height=40 width=50 alt="next"/></div>
         </div>
 
     <!-- <a href="index.html"><button id="back">Go back</button></a> -->
