I'm afraid I may break the main ...

--- a/canvas.html
+++ b/canvas.html
@@ -92,9 +92,13 @@
         </div>
 
     <!-- <a href="index.html"><button id="back">Go back</button></a> -->
+    <!-- The Order of imported scripts is important -->
     <script src="./js/classes.js"></script>
+    <script src="./js/enemy.js"></script>
+    <script src="./js/player.js"></script>
     <script src="./js/canvas.js"></script>
     <script src="./js/index.js"></script>
+
     </main>
     <footer>
         <div class="copyright">
