Starting work on making navigation buttons work

--- a/canvas.html
+++ b/canvas.html
@@ -20,8 +20,8 @@
         <nav>
             <ul class="navigation">
                 <li><a href="#">Characters</a></li>
-                <li><a href="#">Soundtrack</a></li>
-                <li><a href="#">Controls</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PLPWWCtCQd2PbFNNH1onjy_3HjNCNyqqZa">Soundtrack</a></li>
+                <li><a href="controls.html">Controls</a></li>
             </ul>
         </nav>
         <a href="index.html" class="link">Go back</a>
