--- a/canvas.html
+++ b/canvas.html
@@ -19,7 +19,7 @@
         <img class="logo" src="./for-later/Start_Screen_White_BG_png.png" alt="logo">
         <nav>
             <ul class="navigation">
-                <li><a href="#">Characters</a></li>
+                <li><a href="characters.html">Characters</a></li>
                 <li><a href="https://www.youtube.com/playlist?list=PLPWWCtCQd2PbFNNH1onjy_3HjNCNyqqZa">Soundtrack</a></li>
                 <li><a href="controls.html">Controls</a></li>
             </ul>
