begin next feature

--- a/canvas.html
+++ b/canvas.html
@@ -113,6 +113,7 @@
 
 
     <!-- The Order of imported scripts is important -->
+    <script src="./js/characters.js"></script>
     <script src="./js/classes.js"></script>
     <script src="./js/enemy.js"></script>
     <script src="./js/player.js"></script>
