added new character

--- a/character_selection.html
+++ b/character_selection.html
@@ -40,8 +40,8 @@
 		<main>
 			<h1>Choose Your Fighter</h1>
 			<div class="container">
-				<canvas class="player"></canvas>
-				<canvas class="enemy"></canvas>
+				<canvas></canvas>
+				<canvas></canvas>
 				<canvas> </canvas>
 				<canvas></canvas>
 			</div>
