--- a/controls.html
+++ b/controls.html
@@ -16,6 +16,18 @@
     <body>
         <header>
             <img class="logo" src="./for-later/Start_Screen_White_BG_png.png" alt="logo">
+            <nav>
+                <ul class="navigation">
+                    <li><a href="characters.html">Characters</a></li>
+                    <li>
+                        <a
+                            href="https://www.youtube.com/playlist?list=PLPWWCtCQd2PbFNNH1onjy_3HjNCNyqqZa"
+                            >Soundtrack</a
+                        >
+                    </li>
+                    <li><a href="controls.html">Controls</a></li>
+                </ul>
+            </nav>
             <ul class="navigation">
                 <a href="canvas.html" class="link">Go back</a>
             </ul>
