Deleted some unecessary code + improved stage select

--- a/stage_select.html
+++ b/stage_select.html
@@ -30,7 +30,7 @@
 				</ul>
 			</nav>
             <ul class="navigation">
-                <a href="canvas.html" class="link">Go back</a>
+                <a href="index.html" class="link">Go back</a>
             </ul>
         </header>
         <h1> Select Your Stage </h1>
@@ -39,13 +39,13 @@
     
     <!-- Music controller graphics -->
     <div class="music-player">
-        <div id="background"><img src="./assets/background.jpg" height=189.75 width=337.92 alt="prev"/></div>
+        <a href="canvas.html" id="background"></a>
 
-        <div id="background_1"><img src="./assets/background_1.jpg" height=189.75 width=337.92 alt="play"/></div>
+        <a href="canvas.html" id="background_1"></a>
 
-        <div id="background_2"><img src="./assets/background_2.jpg" height=189.75 width=337.92 alt="pause"/></div>
+        <a href="canvas.html" id="background_2"></a>
 
-        <div id="background_3"><img src="./assets/background_3.jpg" height=189.75 width=337.92 alt="next"/></div>
+        <a href="canvas.html" id="background_3"></a>
     </div>
 
     <script src="./js/canvas.js"></script>
