--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>HIKEN</h1>
             <h2>BROWSER BATTLE</h2>
             <!--when the start button is clicked the start page view will go to our main game-->
-            <a href="canvas.html"><button>START</button></a>
+            <a href="stage_select.html"><button>START</button></a>
         </div>
         <script src="js/index.js"></script>
     </main>
