--- a/stage_select.html
+++ b/stage_select.html
@@ -38,14 +38,14 @@
     </body>
     
     <!-- Music controller graphics -->
-    <div class="music-player">
-        <a href="canvas.html" id="background"></a>
+    <div class="backgrounds">
+        <div id="background" onClick="window.location.href='canvas.html';"><img src="./assets/background.jpg" height=189.75 width=337.92/></div>
 
-        <a href="canvas.html" id="background_1"></a>
+        <div id="background_1" onClick="window.location.href='canvas.html';"><img src="./assets/background_1.jpg" height=189.75 width=337.92/></div>
 
-        <a href="canvas.html" id="background_2"></a>
+        <div id="background_2" onClick="window.location.href='canvas.html';"><img src="./assets/background_2.jpg" height=189.75 width=337.92/></div>
 
-        <a href="canvas.html" id="background_3"></a>
+        <div id="background_3" onClick="window.location.href='canvas.html';"><img src="./assets/background_3.jpg" height=189.75 width=337.92/></div>
     </div>
 
     <script src="./js/canvas.js"></script>
