finished character selection screen

--- a/character_selection.html
+++ b/character_selection.html
@@ -40,10 +40,10 @@
 		<main>
 			<h1>Choose Your Fighter</h1>
 			<div class="container">
-				<canvas></canvas>
-				<canvas></canvas>
-				<canvas> </canvas>
-				<canvas></canvas>
+				<canvas class="ray"></canvas>
+				<canvas class="pyro"></canvas>
+				<canvas class="king"></canvas>
+				<canvas class="wiz"></canvas>
 			</div>
 			<div class="characters">
 				<canvas class="kenji"></canvas>
@@ -51,7 +51,7 @@
 				<canvas class="nat"></canvas>
 				<canvas class="riku"></canvas>
 			</div>
-			<script src="./js/characters.js"></script>
+			<script src="./js/character_selection/characters_options.js"></script>
 			<script src="./js/character_selection/selection.js"></script>
 		</main>
 		<footer>
