add character selection to path

--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="./css/index.css" type="text/css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet">
-    <title>Hiken | Web Brawler</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<head>
+		<link rel="stylesheet" href="./css/index.css" type="text/css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet" />
+		<title>Hiken | Web Brawler</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+	</head>
 
-</head>
+	<body>
+		<main>
+			<div class="container">
+				<h1>HIKEN</h1>
+				<h2>BROWSER BATTLE</h2>
+				<!--when the start button is clicked the start page view will go to our main game-->
+				<a href="/character_selection.html"><button>START</button></a>
+			</div>
+			<script src="js/index.js"></script>
+		</main>
 
-<body>
-    <main>
-        <div class="container">
-            <h1>HIKEN</h1>
-            <h2>BROWSER BATTLE</h2>
-            <!--when the start button is clicked the start page view will go to our main game-->
-            <a href="stage_select.html"><button>START</button></a>
-        </div>
-        <script src="js/index.js"></script>
-    </main>
-   
-    <footer>
-        <div class="content">
-            <h3>Web Brawler</h3>
-            <p>Hope you enjoy our game!</p>
-            <ul class="socials">
-                <li><a href="#"><i class="fa fa-facebook"></i> </a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-            </ul>
-        </div>
-        <div class="copyright">
-            <P>copyright &copy;<script>document.write(new Date().getFullYear());</script>
-            Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin</P>
-        </div>
-    </footer>
-</body>
+		<footer>
+			<div class="content">
+				<h3>Web Brawler</h3>
+				<p>Hope you enjoy our game!</p>
+				<ul class="socials">
+					<li>
+						<a href="#"><i class="fa fa-facebook"></i> </a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-twitter"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-google-plus"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-youtube"></i></a>
+					</li>
+				</ul>
+			</div>
+			<div class="copyright">
+				<p>
+					copyright &copy;
+					<script>
+						document.write(new Date().getFullYear());
+					</script>
+					Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin
+				</p>
+			</div>
+		</footer>
+	</body>
 </html>
