Updated background sprites

--- a/stage_select.html
+++ b/stage_select.html
@@ -39,13 +39,13 @@
     
     <!-- Music controller graphics -->
     <div class="backgrounds">
-        <div id="background" onClick="window.location.href='canvas.html';"><img src="./assets/background.jpg" height=189.75 width=337.92/></div>
+        <div id="background" onClick="window.location.href='canvas.html';"><img src="./assets/background.png" height=189.75 width=337.92/></div>
 
-        <div id="background_1" onClick="window.location.href='canvas.html';"><img src="./assets/background_1.jpg" height=189.75 width=337.92/></div>
+        <div id="background_1" onClick="window.location.href='canvas.html';"><img src="./assets/background_1.png" height=189.75 width=337.92/></div>
 
-        <div id="background_2" onClick="window.location.href='canvas.html';"><img src="./assets/background_2.jpg" height=189.75 width=337.92/></div>
+        <div id="background_2" onClick="window.location.href='canvas.html';"><img src="./assets/background_2.png" height=189.75 width=337.92/></div>
 
-        <div id="background_3" onClick="window.location.href='canvas.html';"><img src="./assets/background_3.jpg" height=189.75 width=337.92/></div>
+        <div id="background_3" onClick="window.location.href='canvas.html';"><img src="./assets/background_3.png" height=189.75 width=337.92/></div>
     </div>
 
     <script src="./js/canvas.js"></script>
