Finished stage select

--- a/stage_select.html
+++ b/stage_select.html
@@ -48,7 +48,8 @@
         <div id="background_3" onClick="window.location.href='canvas.html';"><img src="./assets/background_3.png" height=189.75 width=337.92/></div>
     </div>
 
-    <script src="./js/canvas.js"></script>
+    <script src="./js/stage_selection/stage_selection.js"></script>
+    <script src="./js/stage_selection/stages.js"></script>
     
     <footer>
         <div class="copyright">
