finished up Joji's game pausing feature

--- a/canvas.html
+++ b/canvas.html
@@ -95,11 +95,11 @@
     <!-- <a href="index.html"><button id="back">Go back</button></a> -->
     <!-- Pause button code  -->
     <div style="position: absolute;left:970px">
-        <div id="pause" onclick="pauseHandler(event)">
+        <div id="pause" onclick="pauseHandler()">
           <img id="imgPausePlay" src="https://cdn4.iconfinder.com/data/icons/media-controls-4/100/pause-64.png">
         </div>
-      </div>
-      <div id="popup" class="popup-wrapper hide">
+    </div>
+    <div id="popup" class="popup-wrapper hide">
         <div class="popup-content">
             <div class="popup-title">
                 <button type="button" class="popup-close" onclick="hidePopUp()">&times;</button>
@@ -109,7 +109,7 @@
                 <p>Game has been paused.</p>
             </div>
         </div>
-      </div>
+    </div>
 
 
     <!-- The Order of imported scripts is important -->
