worked on the UI and the speed of the game

--- a/character_selection.html
+++ b/character_selection.html
@@ -15,6 +15,9 @@
 			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
 			rel="stylesheet"
 		/>
+		<!-- testing to add scripts in the head -->
+		<script src="./js/character_selection/characters_options.js" defer></script>
+		<script src="./js/character_selection/selection.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -40,19 +43,19 @@
 		<main>
 			<h1>Choose Your Fighter</h1>
 			<div class="container">
+				<canvas class="nat"></canvas>
 				<canvas class="ray"></canvas>
 				<canvas class="pyro"></canvas>
-				<canvas class="king"></canvas>
-				<canvas class="wiz"></canvas>
+				<canvas class="matt"></canvas>
 			</div>
 			<div class="characters">
 				<canvas class="kenji"></canvas>
-				<canvas class="matt"></canvas>
-				<canvas class="nat"></canvas>
+				<canvas class="wiz"></canvas>
+				<canvas class="king"></canvas>
 				<canvas class="riku"></canvas>
 			</div>
-			<script src="./js/character_selection/characters_options.js"></script>
-			<script src="./js/character_selection/selection.js"></script>
+			<!-- <script src="./js/character_selection/characters_options.js"></script>
+			<script src="./js/character_selection/selection.js"></script> -->
 		</main>
 		<footer>
 			<div class="copyright">
