--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
+		<script src="js/index.js" defer></script>
 	</head>
 
 	<body>
@@ -21,13 +22,16 @@
 				<!--when the start button is clicked the start page view will go to our main game-->
 				<a href="character_selection.html"><button>START</button></a>
 			</div>
-			<script src="js/index.js"></script>
+			<!-- <script src="js/index.js"></script> -->
 		</main>
 
 		<footer>
 			<div class="content">
 				<h3>Web Brawler</h3>
-				<p>Hope you enjoy our game!</p>
+				<p>
+					This product was made for CPSC362 - Software Engineering. <br />We
+					hope you enjoy our game!
+				</p>
 				<ul class="socials">
 					<li>
 						<a href="#"><i class="fa fa-facebook"></i> </a>
