--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 	<body>
 		<main>
 			<div class="container">
-				<h1>HIKEN</h1>
+				<h1>
+					<img
+					class="logo"
+					src="./for-later/Start_Screen_White_BG_png.png"
+					alt="logo"
+					/>
+				</h1>
 				<h2>BROWSER BATTLE</h2>
 				<!--when the start button is clicked the start page view will go to our main game-->
 				<a href="character_selection.html"><button>START</button></a>
