--- a/character_selection.html
+++ b/character_selection.html
@@ -29,6 +29,7 @@
 			<nav>
 				<ul class="navigation">
 					<li><a href="characters.html">Characters</a></li>
+					<li><a href="stage_select.html">Stages</a></li>
 					<li>
 						<a
 							href="https://www.youtube.com/playlist?list=PLPWWCtCQd2PbFNNH1onjy_3HjNCNyqqZa"
