--- a/characters.html
+++ b/characters.html
@@ -11,8 +11,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hiken | Web Brawler</title>
-		<link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
+		<link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+			rel="stylesheet"
+		/>
 		<!-- testing to add scripts in the head -->
 		<script src="./js/character_selection/characters_options.js" defer></script>
 		<script src="./js/character_selection/selection.js" defer></script>
@@ -27,6 +30,7 @@
 			<nav>
 				<ul class="navigation">
 					<li><a href="characters.html">Characters</a></li>
+					<li><a href="stage_select.html">Stages</a></li>
 					<li>
 						<a
 							href="https://www.youtube.com/playlist?list=PLPWWCtCQd2PbFNNH1onjy_3HjNCNyqqZa"
