add Matthew to footer

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<div class="container">
 				<h1>
 					<img
-					class="logo"
-					src="./for-later/Start_Screen_White_BG_png.png"
-					alt="logo"
+						class="logo"
+						src="./for-later/Start_Screen_White_BG_png.png"
+						alt="logo"
 					/>
 				</h1>
 				<h2>BROWSER BATTLE</h2>
@@ -59,7 +59,7 @@
 					<script>
 						document.write(new Date().getFullYear());
 					</script>
-					Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin
+					Hiken. designed by Spencer, Joji, Nghia, Matthew, Ethan, and Edwin
 				</p>
 			</div>
 		</footer>
