--- a/character_selection.html
+++ b/character_selection.html
@@ -65,7 +65,7 @@
 					<script>
 						document.write(new Date().getFullYear());
 					</script>
-					Hiken. designed by Spencer, Joji, Nghia, Ethan, and Edwin
+					Hiken. designed by Spencer, Joji, Nghia, Matthew, Ethan, and Edwin
 				</p>
 			</div>
 		</footer>
