--- a/canvas.html
+++ b/canvas.html
@@ -10,6 +10,7 @@
 		<!-- Ask what are these two for -->
 		<!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
 		<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+		<link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
 			rel="stylesheet"
@@ -31,7 +32,7 @@
 			/>
 			<nav>
 				<ul class="navigation">
-					<li><a href="characters.html">Characters</a></li>
+					<li><a href="character_selection.html">Characters</a></li>
 					<li><a href="stage_select.html">Stages</a></li>
 					<li>
 						<a
