--- a/character_selection.html
+++ b/character_selection.html
@@ -11,6 +11,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hiken | Web Brawler</title>
+		<link href="https://fonts.cdnfonts.com/css/road-rage" rel="stylesheet" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
 			rel="stylesheet"
@@ -28,7 +29,7 @@
 			/>
 			<nav>
 				<ul class="navigation">
-					<li><a href="characters.html">Characters</a></li>
+					<li><a href="character_selection.html">Characters</a></li>
 					<li><a href="stage_select.html">Stages</a></li>
 					<li>
 						<a
