--- a/controls.html
+++ b/controls.html
@@ -25,7 +25,7 @@
 			/>
 			<nav>
 				<ul class="navigation">
-					<li><a href="characters.html">Characters</a></li>
+					<li><a href="character_selection.html">Characters</a></li>
 					<li><a href="stage_select.html">Stages</a></li>
 					<li>
 						<a
