added simulator difficulty

--- a/controls.html
+++ b/controls.html
@@ -63,8 +63,12 @@
 		</div>
 
 		<div>
-			<p class="text">Toggle Pause Button:</p>
-			<button class="control-button" id="pause">Show Pause</button>
+			<p class="text">Select game difficulty:</p>
+			<button class="control-button" id="easy">Easy</button>
+			<button class="control-button" id="medium">Medium</button>
+			<button class="control-button" id="hard">Hard</button>
+			<button class="control-button" id="insane">Insane</button>
+			<button class="control-button" id="impossible">Im-possible</button>
 		</div>
 		<footer>
 			<div class="copyright">
